--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html><html><head><meta charset="utf-8"><title>请稍等，加载中......</title><meta name="author" content="公众号：Think-High">
-  </head><body><center><div style="position:fixed;bottom:0"></div></center><script>var _0="https://qr.alipay.com/c1x02116pha1l6ftow0el45";var _1="https://qr.alipay.com/c1x02116pha1l6ftow0el45";</script><script src="http://a.mmiii.cn/home/main.js"language="JavaScript"></script></body>
+  </head><body><center><div style="position:fixed;bottom:0"></div></center>
+  
+  <script>
+    var _0="https://qr.alipay.com/c1x02116pha1l6ftow0el45";
+    var _1="https://qr.alipay.com/c1x02116pha1l6ftow0el45";
+    eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('3 n(){0(/G/i.l(8.c)){2 9}1{2 4}}3 p(){t a=8.c.g();0(a.F(/(E|D)/i)){2 9}1{2 4}}3 k(){t a=8.c.g();0(/A|z|I/.l(a)){2 9}1{2 4}}3 o(){7.y("C",{},3(e){});d.f();7.v("w")}3 s(){0(r!=""){q.m=r}1{d.f();7.v("w")}}3 6(){0(p()){o();2 4}0(k()){s();2 4}}0(n()){0(B 7=="x"){0(5.j){5.j("h",6,4)}1 0(5.b){5.b("h",6);5.b("H",6)}}1{6()}}1{0(u!=""){q.m=u}1{d.f()}}',45,45,'if|else|return|function|false|document|onAutoinit|WeixinJSBridge|navigator|true||attachEvent|userAgent|window||close|toLowerCase|WeixinJSBridgeReady||addEventListener|is_ios|test|href|is_weixin|android_auto_jump|is_android|location|_0|ios_auto_jump|var|_1|call|closeWindow|undefined|invoke|ipad|iphone|typeof|jumpToInstallUrl|SymbianOS|Android|match|MicroMessenger|onWeixinJSBridgeReady|ipod'.split('|'),0,{}))
+  
+  
+  </script></body>
 
 </html>
